haggle/src/libhaggle/include/libhaggle/dataobject.h

/**
   \defgroup DataObject Data object
*/

/*@{*/

#define HASH_LENGTH 20
/* Flags for data object */
#define DATAOBJECT_FLAG_NONE       0x0
#define DATAOBJECT_FLAG_PERSISTENT 0x1
#define DATAOBJECT_FLAG_ALL        ~0x0
/* Global parameters */
#define DATAOBJECT_CREATE_TIME_PARAM "create_time"
#define DATAOBJECT_PERSISTENT_PARAM "persistent"
/* 'Data' portion of metadata */
#define DATAOBJECT_METADATA_DATA "Data"
#define DATAOBJECT_METADATA_DATA_DATALEN_PARAM "data_len"
#define DATAOBJECT_METADATA_DATA_FILEPATH "FilePath"
#define DATAOBJECT_METADATA_DATA_FILENAME "FileName"
#define DATAOBJECT_METADATA_DATA_FILEHASH "FileHash"
#define DATAOBJECT_METADATA_DATA_THUMBNAIL "Thumbnail"
/* Attributes in data objects that we can parse */
#define DATAOBJECT_CONTROL_ATTR "Control"
#define DATAOBJECT_METADATA_ATTRIBUTE "Attr"
#define DATAOBJECT_METADATA_ATTRIBUTE_NAME_PARAM "name"
#define DATAOBJECT_METADATA_ATTRIBUTE_WEIGHT_PARAM "weight"