haggle/src/libhaggle/include/libhaggle/ipc.h

	
typedef struct event {
	haggle_event_type_t type;
	union {
		struct dataobject *dobj;
		struct attributelist *interests;
		struct attributelist *interests_policies; // IRD, HK
		struct nodelist *neighbors;
		unsigned int shutdown_reason;
	};
} haggle_event_t;
typedef struct haggle_handle *haggle_handle_t;
/**
	A haggle event handler. 
	
	An event contains a type and auxiliary data that depends on the event type.
	The auxiliary data will automatically be freed after the execution of the
	event handler. In case the handling application wants to keep, e.g., a
	data object, then the data pointer should be nullified, or the return value
	be 1.
*/
typedef int (STDCALL *haggle_event_handler_t) (haggle_event_t *, void *);
/**

*/
typedef void (STDCALL *haggle_event_loop_start_t) (void *);
typedef void (STDCALL *haggle_event_loop_stop_t) (void *);
/* Errors */
#define	LIBHAGGLE_ERR_BAD_HANDLE    0x01
#define	LIBHAGGLE_ERR_NOT_CONNECTED 0x02
	
#define DATAOBJECT_METADATA_APPLICATION "Application"
#define DATAOBJECT_METADATA_APPLICATION_NAME_PARAM "name"
#define DATAOBJECT_METADATA_APPLICATION_ID_PARAM "id"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL "Control"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_TYPE_PARAM "type"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_MESSAGE "Message"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_DIRECTORY "Directory"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_SESSION "Session"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT "Event"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_TYPE_PARAM "type"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_INTEREST "Interest"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_INTEREST_NAME_PARAM "name"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_INTEREST_WEIGHT_PARAM "weight"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_INTEREST "Interest"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_INTEREST_NAME_PARAM "name"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_INTEREST_WEIGHT_PARAM "weight"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_DATAOBJECT "DataObject"
#define DATAOBJECT_METADATA_APPLICATION_CONTROL_DATAOBJECT_ID_PARAM "id"
HAGGLE_API int STDCALL haggle_ipc_register_event_interest_with_arg(haggle_handle_t hh, const int eventId, haggle_event_handler_t handler, void *arg);
/**
	Register interest in a particular attribute name/value combination.
	
	If there is an event handler registered to receive data objects, that event
	handler will be given any new data objects received by haggle that match
	any interest this application has received.
	
	@returns an error code.
*/
HAGGLE_API int haggle_ipc_add_application_interest(haggle_handle_t hh, const char *name, const char *value);
/**
	Register interest in a particular attribute name/value combination with weight.
	
	If there is an event handler registered to receive data objects, that event
	handler will be given any new data objects received by haggle that match
	any interest this application has received.
	
	@returns an error code.
*/
HAGGLE_API int haggle_ipc_add_application_interest_weighted(haggle_handle_t hh, const char *name, const char *value, const unsigned long weight);
/**
	Register several interests in the form of an attribute list.

	@returns an error code.

	Note: the attribute list will not be freed or modified. 
	It still has to be freed by the caller.
*/

HAGGLE_API int haggle_ipc_add_application_interests(haggle_handle_t hh, const struct attributelist *al);
/**
	Deregister interest in a particular attribute name/value combination.
	
	@returns an error code.
*/
HAGGLE_API int haggle_ipc_remove_application_interest(haggle_handle_t hh, const char *name, const char *value);
/**
	Deregister several interests in the form of a list of attributes
	
	@returns an error code.

	Note: the attribute list will not be freed or modified. 
	It still has to be freed by the caller.
*/
HAGGLE_API int haggle_ipc_remove_application_interests(haggle_handle_t hh, const struct attributelist *al);
/**
	Get the currently registered application interests for this application.
	The application interests will be asynchrounously returned in a response
	data object, which the applications receive in one of its event handlers.
	The response data object must be handled by the application itself.

	@returns positive value on success, negative (error code) on failure.
*/
HAGGLE_API int haggle_ipc_get_application_interests_async(haggle_handle_t hh);
/**
	Get the data objects that match the currently registered application 
	interests for this application. The application interests will be 
	asynchrounously returned as usual. MOS: Most importantly, this function
	provides a means to explicitly reset the applications Bloom filter.

	@returns positive value on success, negative (error code) on failure.
*/
HAGGLE_API int haggle_ipc_get_data_objects_async(haggle_handle_t hh);
/**
	Delete a data object that is managed by Haggle. After this call,
	Haggle will no longer store this data object, but it may still exist
	in the application (i.e., the data object given is not deleted in 
	the application).

	@returns a positive value on success, negative (error code) on failure.
	A success of this function does not necessarily mean that the data object
	was deleted from Haggle. It only means that this asynchronous call was
	successful.

	NOTE: This function is not yet implemented.
*/

HAGGLE_API int haggle_ipc_delete_data_object_by_id_bloomfilter(haggle_handle_t hh, const unsigned char id[20], int keep_in_bloomfilter);
HAGGLE_API int haggle_ipc_delete_data_object_bloomfilter(haggle_handle_t hh, const struct dataobject *dobj, int keep_in_bloomfilter);
HAGGLE_API int haggle_ipc_delete_data_object_by_id(haggle_handle_t hh, const unsigned char id[20]);
HAGGLE_API int haggle_ipc_delete_data_object(haggle_handle_t hh, const struct dataobject *dobj);
/**
        Forces Haggle to try and send its node description to
	all neighbors.

	Use lightly. This functions should in general never be used.
	It can cause excessive transmissions.
*/
HAGGLE_API int haggle_ipc_send_node_description(haggle_handle_t hh);
/**
	Send shutdown event to Haggle daemon.

	@returns an error code.
*/
HAGGLE_API int haggle_ipc_shutdown(haggle_handle_t hh);
/* Event loop */
/**
	Checks if the event loop is running.
	@returns 1 if the event loop is running, 0 if it is not, or an error code on error.
*/

HAGGLE_API int haggle_event_loop_is_running(haggle_handle_t hh);
/**
	Starts the haggle event loop. This function runs synchronously, and as such
	will not  return until the haggle_event_loop_stop function is called.
	
	If an event loop is already running for the given haggle handle...?
	
	@returns an error code.
*/

HAGGLE_API int haggle_event_loop_run(haggle_handle_t hh);
/**
	Starts running the haggle event loop asynchronously. The haggle event loop
	can be stopped by a call to haggle_event_loop_stop.
	
	If an event loop is already running for the given haggle handle...?
	
	@returns an error code.
*/
HAGGLE_API int haggle_event_loop_run_async(haggle_handle_t hh);
/**
	Stops a running haggle event loop.
	
	@returns an error code.
*/
HAGGLE_API int haggle_event_loop_stop(haggle_handle_t hh);
HAGGLE_API int haggle_event_loop_run_async(haggle_handle_t hh);
/**
	Registers callback functions to be called by the event loop
        when it starts and stops, respectively. The callbacks are
        executed in the event loop's thread context, which might be a
        different one from the thread if the event loop is started
        asynchronously.
	
        @param hh the haggle handle
        @param start the startup callback function, or NULL if none.
        @param stop the stop callback function, or NULL if none.
        @param arg an argument to be passed with the callbacks.
	@returns an error code.
*/
HAGGLE_API int haggle_event_loop_register_callbacks(haggle_handle_t hh, haggle_event_loop_start_t start, haggle_event_loop_stop_t stop, void *arg);