haggle/src/apps/filegenerate/haggle.py


# /usr/local/include/libhaggle/ipc.h: 247
if hasattr(_libs['haggle'], 'haggle_ipc_register_event_interest_with_arg'):
    haggle_ipc_register_event_interest_with_arg = _libs['haggle'].haggle_ipc_register_event_interest_with_arg
    haggle_ipc_register_event_interest_with_arg.argtypes = [haggle_handle_t, c_int, haggle_event_handler_t, POINTER(None)]
    haggle_ipc_register_event_interest_with_arg.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 258
if hasattr(_libs['haggle'], 'haggle_ipc_add_application_interest'):
    haggle_ipc_add_application_interest = _libs['haggle'].haggle_ipc_add_application_interest
    haggle_ipc_add_application_interest.argtypes = [haggle_handle_t, String, String]
    haggle_ipc_add_application_interest.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 269
if hasattr(_libs['haggle'], 'haggle_ipc_add_application_interest_weighted'):
    haggle_ipc_add_application_interest_weighted = _libs['haggle'].haggle_ipc_add_application_interest_weighted
    haggle_ipc_add_application_interest_weighted.argtypes = [haggle_handle_t, String, String, c_ulong]
    haggle_ipc_add_application_interest_weighted.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 280
if hasattr(_libs['haggle'], 'haggle_ipc_add_application_interests'):
    haggle_ipc_add_application_interests = _libs['haggle'].haggle_ipc_add_application_interests
    haggle_ipc_add_application_interests.argtypes = [haggle_handle_t, POINTER(struct_attributelist)]
    haggle_ipc_add_application_interests.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 288
if hasattr(_libs['haggle'], 'haggle_ipc_remove_application_interest'):
    haggle_ipc_remove_application_interest = _libs['haggle'].haggle_ipc_remove_application_interest
    haggle_ipc_remove_application_interest.argtypes = [haggle_handle_t, String, String]
    haggle_ipc_remove_application_interest.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 298
if hasattr(_libs['haggle'], 'haggle_ipc_remove_application_interests'):
    haggle_ipc_remove_application_interests = _libs['haggle'].haggle_ipc_remove_application_interests
    haggle_ipc_remove_application_interests.argtypes = [haggle_handle_t, POINTER(struct_attributelist)]
    haggle_ipc_remove_application_interests.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 308
if hasattr(_libs['haggle'], 'haggle_ipc_get_application_interests_async'):
    haggle_ipc_get_application_interests_async = _libs['haggle'].haggle_ipc_get_application_interests_async
    haggle_ipc_get_application_interests_async.argtypes = [haggle_handle_t]
    haggle_ipc_get_application_interests_async.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 317
if hasattr(_libs['haggle'], 'haggle_ipc_get_data_objects_async'):
    haggle_ipc_get_data_objects_async = _libs['haggle'].haggle_ipc_get_data_objects_async
    haggle_ipc_get_data_objects_async.argtypes = [haggle_handle_t]
    haggle_ipc_get_data_objects_async.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 333
if hasattr(_libs['haggle'], 'haggle_ipc_delete_data_object_by_id_bloomfilter'):
    haggle_ipc_delete_data_object_by_id_bloomfilter = _libs['haggle'].haggle_ipc_delete_data_object_by_id_bloomfilter
    haggle_ipc_delete_data_object_by_id_bloomfilter.argtypes = [haggle_handle_t, c_ubyte * 20, c_int]
    haggle_ipc_delete_data_object_by_id_bloomfilter.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 334
if hasattr(_libs['haggle'], 'haggle_ipc_delete_data_object_bloomfilter'):
    haggle_ipc_delete_data_object_bloomfilter = _libs['haggle'].haggle_ipc_delete_data_object_bloomfilter
    haggle_ipc_delete_data_object_bloomfilter.argtypes = [haggle_handle_t, POINTER(struct_dataobject), c_int]
    haggle_ipc_delete_data_object_bloomfilter.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 335
if hasattr(_libs['haggle'], 'haggle_ipc_delete_data_object_by_id'):
    haggle_ipc_delete_data_object_by_id = _libs['haggle'].haggle_ipc_delete_data_object_by_id
    haggle_ipc_delete_data_object_by_id.argtypes = [haggle_handle_t, c_ubyte * 20]
    haggle_ipc_delete_data_object_by_id.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 336
if hasattr(_libs['haggle'], 'haggle_ipc_delete_data_object'):
    haggle_ipc_delete_data_object = _libs['haggle'].haggle_ipc_delete_data_object
    haggle_ipc_delete_data_object.argtypes = [haggle_handle_t, POINTER(struct_dataobject)]
    haggle_ipc_delete_data_object.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 345
if hasattr(_libs['haggle'], 'haggle_ipc_send_node_description'):
    haggle_ipc_send_node_description = _libs['haggle'].haggle_ipc_send_node_description
    haggle_ipc_send_node_description.argtypes = [haggle_handle_t]
    haggle_ipc_send_node_description.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 352
if hasattr(_libs['haggle'], 'haggle_ipc_shutdown'):
    haggle_ipc_shutdown = _libs['haggle'].haggle_ipc_shutdown
    haggle_ipc_shutdown.argtypes = [haggle_handle_t]
    haggle_ipc_shutdown.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 360
if hasattr(_libs['haggle'], 'haggle_event_loop_is_running'):
    haggle_event_loop_is_running = _libs['haggle'].haggle_event_loop_is_running
    haggle_event_loop_is_running.argtypes = [haggle_handle_t]
    haggle_event_loop_is_running.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 370
if hasattr(_libs['haggle'], 'haggle_event_loop_run'):
    haggle_event_loop_run = _libs['haggle'].haggle_event_loop_run
    haggle_event_loop_run.argtypes = [haggle_handle_t]
    haggle_event_loop_run.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 379
if hasattr(_libs['haggle'], 'haggle_event_loop_run_async'):
    haggle_event_loop_run_async = _libs['haggle'].haggle_event_loop_run_async
    haggle_event_loop_run_async.argtypes = [haggle_handle_t]
    haggle_event_loop_run_async.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 385
if hasattr(_libs['haggle'], 'haggle_event_loop_stop'):
    haggle_event_loop_stop = _libs['haggle'].haggle_event_loop_stop
    haggle_event_loop_stop.argtypes = [haggle_handle_t]
    haggle_event_loop_stop.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 387
if hasattr(_libs['haggle'], 'haggle_event_loop_run_async'):
    haggle_event_loop_run_async = _libs['haggle'].haggle_event_loop_run_async
    haggle_event_loop_run_async.argtypes = [haggle_handle_t]
    haggle_event_loop_run_async.restype = c_int

# /usr/local/include/libhaggle/ipc.h: 402
if hasattr(_libs['haggle'], 'haggle_event_loop_register_callbacks'):
    haggle_event_loop_register_callbacks = _libs['haggle'].haggle_event_loop_register_callbacks
    haggle_event_loop_register_callbacks.argtypes = [haggle_handle_t, haggle_event_loop_start_t, haggle_event_loop_stop_t, POINTER(None)]
    haggle_event_loop_register_callbacks.restype = c_int

# /usr/local/include/libhaggle/list.h: 34
try:
    LIST_NULL = (-1)
except:
    pass

# /usr/local/include/libhaggle/list.h: 35
try:
    LIST_SUCCESS = 1
except:
    pass

# /usr/local/include/libhaggle/list.h: 111
def list_empty(head):
    return (head == ((head.contents.next).value))

# /usr/local/include/libhaggle/list.h: 113
def list_first(head):
    return (head.contents.next)

# /usr/local/include/libhaggle/list.h: 115
def list_unattached(le):
    return ((((le.contents.next).value) == le) and (((le.contents.prev).value) == le))

# /usr/local/include/libhaggle/dataobject.h: 43
try:
    HASH_LENGTH = 20
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 51
try:
    DATAOBJECT_FLAG_NONE = 0
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 52
try:
    DATAOBJECT_FLAG_PERSISTENT = 1
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 53
try:
    DATAOBJECT_FLAG_ALL = (~0)
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 56
try:
    DATAOBJECT_CREATE_TIME_PARAM = 'create_time'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 57
try:
    DATAOBJECT_PERSISTENT_PARAM = 'persistent'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 60
try:
    DATAOBJECT_METADATA_DATA = 'Data'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 61
try:
    DATAOBJECT_METADATA_DATA_DATALEN_PARAM = 'data_len'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 62
try:
    DATAOBJECT_METADATA_DATA_FILEPATH = 'FilePath'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 63
try:
    DATAOBJECT_METADATA_DATA_FILENAME = 'FileName'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 64
try:
    DATAOBJECT_METADATA_DATA_FILEHASH = 'FileHash'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 65
try:
    DATAOBJECT_METADATA_DATA_THUMBNAIL = 'Thumbnail'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 68
try:
    DATAOBJECT_CONTROL_ATTR = 'Control'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 70
try:
    DATAOBJECT_METADATA_ATTRIBUTE = 'Attr'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 71
try:
    DATAOBJECT_METADATA_ATTRIBUTE_NAME_PARAM = 'name'
except:
    pass

# /usr/local/include/libhaggle/dataobject.h: 72
try:
    DATAOBJECT_METADATA_ATTRIBUTE_WEIGHT_PARAM = 'weight'
except:
    pass

# /usr/local/include/libhaggle/node.h: 32
try:
    NODE_ID_LEN = 20
except:
    pass

# /usr/local/include/libhaggle/node.h: 44
try:
    HAGGLE_XML_NODE_NAME = 'Node'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 94
try:
    LIBHAGGLE_ERR_BAD_HANDLE = 1
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 95
try:
    LIBHAGGLE_ERR_NOT_CONNECTED = 2
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 114
try:
    DATAOBJECT_METADATA_APPLICATION = 'Application'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 115
try:
    DATAOBJECT_METADATA_APPLICATION_NAME_PARAM = 'name'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 116
try:
    DATAOBJECT_METADATA_APPLICATION_ID_PARAM = 'id'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 117
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL = 'Control'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 118
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_TYPE_PARAM = 'type'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 119
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_MESSAGE = 'Message'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 120
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_DIRECTORY = 'Directory'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 121
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_SESSION = 'Session'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 122
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT = 'Event'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 123
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_TYPE_PARAM = 'type'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 124
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_INTEREST = 'Interest'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 125
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_INTEREST_NAME_PARAM = 'name'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 126
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_INTEREST_WEIGHT_PARAM = 'weight'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 127
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_INTEREST = 'Interest'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 128
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_INTEREST_NAME_PARAM = 'name'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 129
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_EVENT_INTEREST_WEIGHT_PARAM = 'weight'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 130
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_DATAOBJECT = 'DataObject'
except:
    pass

# /usr/local/include/libhaggle/ipc.h: 131
try:
    DATAOBJECT_METADATA_APPLICATION_CONTROL_DATAOBJECT_ID_PARAM = 'id'
except:
    pass
